--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,8 +14,7 @@
 
     <section class="container">
       <form id="my-form">
-        <h1>Question:</h1>
-        <p>The question is here</p>
+        <p style="font-size: 25px;">The question is here</p>
         <div class="form-check">
           <input type="radio" class="form-check-input" id="answer1id" name="groupOfMaterialRadios">
           <label class="form-check-label" for="answer1id">Option 1</label>
